[project]
name = "mh-z19-exporter"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "prometheus-client>=0.17.1",
    "mh_Z19>=3.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "flake8>=5.0.4",
]

[tool.hatch.metadata]
allow-direct-references = true
